<resources>

    <string name="app_name">Pomodoro</string>

    <string name="timer_default">25:00</string>

    <string name="btn_start">Iniciar</string>
    <string name="btn_pause">Pausar</string>
    <string name="btn_resume">Reanudar</string>
    <string name="btn_restart">Reiniciar</string>
    <string name="add_task">Agregar</string>
    <string name="hint_task">Escriba una tarea...</string>
    <string name="no_tasks">No hay tareas registradas.</string>
    <string name="no_sessions">No hay sesiones registradas.</string>

</resources>